--- a/text/projekt-01-kapitoly-chapters.tex
+++ b/text/projekt-01-kapitoly-chapters.tex
@@ -100,10 +100,6 @@ V~rámci simulace můžeme sledovat i hodnoty, které s~výsledkem simulace souv
 
 Jako všechny procesy, tak i simulace mají své pozitivní i negativní vlastnosti. V~jednoduchosti se dá říct, že simulace šetří čas a peníze, na druhou stranu však mohou stát mnoho zdrojů (peněz i času) pro to, aby vůbec byly vytvořeny a provedeny podle reálného podkladu.
 
-\section{Výhody a nevýhody využití simulací}
-
-Jako všechny procesy, tak i simulace mají své pozitivní i negativní vlastnosti. V~jednoduchosti se dá říct, že simulace šetří čas a peníze, na druhou stranu však mohou stát mnoho zdrojů (peněz i času) pro to, aby vůbec byly vytvořeny a provedeny podle reálného podkladu.
-
 \subsection{Výhody využití simulací}
 \label{vyhody}
 Jak už bylo zmíněno výše, mezi hlavní výhody patří  ušetřený čas a finanční prostředky potřebné pro provedení experimentu. Kromě nich však můžeme zmínit ještě bezpečnost, replikovatelnost a rychlost. Bližší popis výhod:
@@ -414,6 +410,7 @@ Tento model byl implementován také v jazyce MATLAB. K výpočtu byla využita 
 
 
 \subsection{Tuhý systém}
+\label{tuhy}
 Tuhý systém\footnote{Z anglického "stiff system"} je systém, který je popsán matematickou rovnicí, kterou lze označit za tuhou \cite{hairer}. Tuhá rovnice je diferenciální rovnice, která má při řešení určitými numerickými metodami numericky nestabilní řešení. Systémy, které můžeme označit za tuhé, můžeme najít například v rámci chemických reakcí. Tato nestabilita je způsobena vysokou hodnotou délky kroku při řešení rovnice. Pro řešení se většinou používají jednokrokové metody pro výpočty diferenciálních rovnic. Obvykle je k řešení využita některá z varianty metod Runge-Kutta, nebo i jednoduchá Eulerova metoda \cite{IMS-skripta}. Při výpočtu vícekrokovou metodou se využívají například metody Adamsova, nebo Nyströmova. Využití vícekrokových metod je ale velmi vzácné a podle literatury popisováno jako méně stabilní, než jednokrokové metody \cite{hairer}. Pro účely experimentu byla vybrána rovnice:
 
 \begin{equation}
@@ -431,10 +428,11 @@ Výsledky běhů simulace implementovaných modelů lze nalézt v kapitole \ref{
 
 \chapter{Výsledky simulací a porovnání výsledků}
 \label{kapitola5}
-V této kapitole lze nalézt výsledky z experimentů a následné vyhodnocení porovnání simulačních nástrojů. Každý z modelů, které byly popsány v kapitole \ref{implementace}, byl postupně implementován ve všech nástrojích uvedených v kapitole \ref{popis-nastroju}. Pokud tomu tak nebylo, pak je to zohledněno v jeho hodnocení obtížnosti implementace.
+V této kapitole lze nalézt výsledky z experimentů a následné vyhodnocení porovnání simulačních nástrojů. Každý z modelů, které byly popsány v kapitole \ref{implementace}, byl postupně implementován ve všech nástrojích uvedených v kapitole \ref{popis-nastroju}. 
 
 \section{Model 1}
 \label{srovnani-micek}
+Prvn
 
 
 \begin{table}[ht]
@@ -445,73 +443,94 @@ V této kapitole lze nalézt výsledky z experimentů a následné vyhodnocení 
 MATLAB       &                          &  &  \\ \hline
 GNU Octave   &                          &  &  \\ \hline
 SciLab       &                          &  &  \\ \hline
-Dymola       &                          &  &  \\ \hline
+Dymola       &         0.010                 &  &  \\ \hline
 FreeMat &                          &  &  \\ \hline
-OpenModelica    &                          &  &  \\ \hline
-jModelica        &                          &  &  \\ \hline
+OpenModelica    &       0.014                   &  &  \\ \hline
+jModelica        &     0.11                     &  &  \\ \hline
 Scipy           &                          &  &  \\ \hline
 \end{tabular}
-\caption{Průměrná rychlost výpočtu v sekundách pro model 1. Průměr byl počítán z 50 měření.}
+\caption{Průměrná rychlost výpočtu v sekundách pro model 1. Zaokrouhleno na dvě platná desetinná místa.}
 \label{tab:micek-tabulka}
 \end{table}
 
 \section{Model 2}
 \label{srovnani-kruh}
+Druhým modelem v pořadí, který byl implementován, byl jednoduchý kruhový test popsaný v kapitole \ref{kruhovy-test}. Jak je patrné z výsledků rychlosti výpočtu v tabulce \ref{tab:kruh-tabulka}, rozdíly napříč jednotlivými nástroji jsou velké. Pokud se například podíváme na nástroje napsané v jazyce Modelica (Dymola, OpenModelica, jModelica), je rozdíl v rychlosti mezi jModelica a zbytkem nástrojů o prakticky řádový. Zde je nunto podoktnout, že nástroj Dymola pro původní délku testu vypisoval strojový čas 0s. Po delším zkoumání bylo zjištěno, že Dymola čas zaokrouhluje na setiny vteřin, proto u takto malých výpočtů nebylo možné dosáhnout validního  výsledku měření. Toto zaokrouhlení navíc provádí až po nějaké době výpočtu -- v našem případě to bylo po více než dvojnásobném simulačním čase. Pokud by nástroj byl schopen dodávat validní výslekdy, byl by bez pochyb nejrychlejší z nástrojů napsaných pro jazyk Modelica.
 
-
+\begin{savenotes}
 \begin{table}[ht]
 \centering
 \begin{tabular}{|l|l|l|l|}
 \hline
              & Rychlost výpočtu {[}s{]} & Obtížnost implementace &  \\ \hline
-MATLAB       &                          &  &  \\ \hline
-GNU Octave   &                          &  &  \\ \hline
-SciLab       &                          &  &  \\ \hline
-Dymola       &                          &  &  \\ \hline
+MATLAB       &         2.31                 &  &  \\ \hline
+GNU Octave   &           X               &  &  \\ \hline
+SciLab       &            0.0045              &  &  \\ \hline
+Dymola       &           0.010\footnote{v čase 22.76s}               &  &  \\ \hline
 FreeMat &                          &  &  \\ \hline
-OpenModelica    &                          &  &  \\ \hline
-jModelica        &                     &  &  \\ \hline
+OpenModelica    &        0.014                  &  &  \\ \hline
+jModelica        &       0.0065              &  &  \\ \hline
 Scipy             &      0.065                    &  &  \\ \hline
 \end{tabular}
-\caption{Průměrná rychlost výpočtu v sekundách pro model 1. Průměr byl počítán z 50 měření.}
+\caption{Průměrná rychlost výpočtu v sekundách pro model 2. Zaokrouhleno na dvě platná desetinná místa.}
 \label{tab:kruh-tabulka}
 \end{table}
+\end{savenotes}
 
+\todo{python cajk}
+
+\todo{matlab bankrot}
 
 \section{Model 3}
 \label{srovnani-tuhy}
-
-
+Posledním měřeným modelem byla simulace tuhého systému popsaného v kapitole \ref{tuhy}. V tomto případě bylo rozpětí výsledků měření nejmenší napříč všemi nástroji. V tomto případě muhou být výsledky poněkud zkreslené různými numerickými metodami, jelikož žádný z nástrojů, vyjma nástrojů napsaných pro jazyk Modelica, nepodporují stejné metody pro řešení tuhých rovnic, a proto byly vybrány metody doporučované oficiálními dokumentacemi. Výsledky jsou dostupné v tabulce \ref{tab:tuhy-tabulka}.
+\begin{savenotes}
 \begin{table}[ht]
 \centering
 \begin{tabular}{|l|l|l|l|}
 \hline
              & Rychlost výpočtu {[}s{]} & Obtížnost implementace &  \\ \hline
-MATLAB       &                          &  &  \\ \hline
+MATLAB       &         0.35                 &  &  \\ \hline
 GNU Octave   &                          &  &  \\ \hline
-SciLab       &                          &  &  \\ \hline
-Dymola       &                          &  &  \\ \hline
+SciLab       &          0.26                &  &  \\ \hline
+Dymola       &        0.010\footnote{v čase 258s}                  &  &  \\ \hline
 FreeMat &                          &  &  \\ \hline
-OpenModelica    &                          &  &  \\ \hline
-jModelica        &                          &  &  \\ \hline
+OpenModelica    &     0.015                     &  &  \\ \hline
+jModelica        &    0.0052                      &  &  \\ \hline
  Scipy            &                          &  &  \\ \hline
 \end{tabular}
-\caption{Průměrná rychlost výpočtu v sekundách pro model 1. Průměr byl počítán z 50 měření.}
+\caption{Průměrná rychlost výpočtu v sekundách pro model 3. Zaokrouhleno na dvě platná desetinná místa.}
 \label{tab:tuhy-tabulka}
 \end{table}
+\end{savenotes}
 
-\section{Model 4}
-
-\section{Model 5}
+U tohoto modelu bych chtěl vyzdvihnout kvality nástroje Dymola, které výpočet zabral velmi procesorového málo času. Jak je patrné z tabulky výsledků, výpočet zabral pouhých 0.010, avšak v čase simulace 258 sekund. Pokud bychom přepočítali výsledek na čas simulace $T_max = 10$, pak by rychlost výpočtu byla 0,00038 sekund.
 
 
-\section{Shrnutí}
+\section{Shrnutí a doporučení}
+\todo{nekompatibilita metod u matlabu}
 
+\todo{nekompatibilita jednotlivych matlabu}
+
+\todo{jednoduchost zapisu v modelica - doporucuju}
+
+\todo{python - pri dobre znalosti velmi silny nastroj}
 
 
 
 \chapter{Závěr}
 \label{kapitola6}
 
+\todo{cile}
+
+\todo{popis prace}
+
+\todo{popis porovnani - 3 modely, 8 nastroju}
+
+\todo{problemy - nekompatibilita, ruzne metody}
+
+\todo{mozne rozsireni}
+
+\todo{osobni pocit}
 
 %===============================================================================
